# Local-RAG

./: README.md  header.txt  main.py  pyproject.toml
cli/: command_handler.py  rag_answer.py
src/: config.py  filters.py  hyde.py  ingest.py  llm.py  rag.py  schema.py  store.py
src/chunking/: base.py  registry.py
src/chunking/chunking_strategies/: recursive_chunking.py  semantic_chunking.py
src/embeddings/: hugging_face_embed.py  ollama_embed.py  registry.py
src/prompts/: answer.jinja2  prompts.py  summary_map.jinja2  summary_reduce.jinja2  summary_single.jinja2
