[project]
name = "notebook-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "huggingface>=0.0.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "nltk>=3.9.4",
    "ollama>=0.6.2",
    "opendataloader-pdf[hybrid]>=2.4.7",
    "pypdf>=6.12.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "textual>=8.2.7",
    "torch>=2.12.0",
]
